# paper-agent

./: .gitignore  .npmignore  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  config.example.json  package-lock.json  package.json  paper-agent.sh  server.js
modules/japanese-style-rag/project/: .env.example  .gitignore  AGENTS.md  README.md  pyproject.toml
modules/japanese-style-rag/project/data/source_corpus/: public_sources.json
modules/japanese-style-rag/project/data/task_templates/: task_presets.json
modules/japanese-style-rag/project/scripts/: build_source_index.py  build_style_index.py  classify_sources.py  download_public_sources.py  eval_guardrails.py  generate_report.py  ingest_sources.py  ingest_style.py  seed_style_profiles.py  serve_api.py  write_source_meta.py
modules/japanese-style-rag/project/src/jstyle_rag/: __init__.py  cli.py  config.py  module.py  vector.py
modules/japanese-style-rag/project/src/jstyle_rag/api/: schemas.py  server.py
modules/japanese-style-rag/project/src/jstyle_rag/generation/: __init__.py  anti_ai_editor.py  generator.py  prompt_builder.py  provenance.py  report_pipeline.py
modules/japanese-style-rag/project/src/jstyle_rag/loaders/: __init__.py  pdf_loader.py  text_loader.py
modules/japanese-style-rag/project/src/jstyle_rag/sources/: __init__.py  citation_guard.py  source_index.py  (+3 more)
modules/japanese-style-rag/project/tests/: test_citation_guard.py  test_module_contract.py  test_prompt_builder.py  test_provenance.py  test_similarity_guard.py  test_source_metadata.py  test_style_extractor.py  test_vector_embeddings.py
(+18 files in other folders)
