[project]
name = "japanese-report-style-rag"
version = "0.1.0"
description = "Local Japanese Report Style RAG MVP with style-only profiles and source-grounded generation."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "typer[all]>=0.12.0",
  "fastapi>=0.111.0",
  "uvicorn[standard]>=0.30.0",
  "pydantic>=2.7.0",
  "pypdf>=4.2.0",
  "numpy>=1.26.0",
  "sentence-transformers>=3.0.0",
  "chromadb>=0.5.0",
  "httpx>=0.27.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0"
]

[project.scripts]
jstyle = "jstyle_rag.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/jstyle_rag"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-q"
